[gd_scene load_steps=11 format=3 uid="uid://ovdagb37cly2"]

[ext_resource type="Script" path="res://Scripts/main_game.gd" id="1_cli67"]
[ext_resource type="PackedScene" uid="uid://deapfxn60u2a8" path="res://Scenes/Level/level.tscn" id="1_g3j21"]
[ext_resource type="PackedScene" uid="uid://dp28sm0db1oll" path="res://Scenes/Player/Player.tscn" id="2_qvjd0"]
[ext_resource type="PackedScene" uid="uid://c4ldwr7kea5nv" path="res://Scenes/UI/ui.tscn" id="3_r8s1c"]
[ext_resource type="PackedScene" uid="uid://cda7j5tba644r" path="res://Scenes/Enemy/enemy_fighter1.tscn" id="5_v0tgt"]
[ext_resource type="PackedScene" uid="uid://c7vdnq23tl853" path="res://Scenes/Enemy/asteroid/asteroid.tscn" id="6_86x8t"]
[ext_resource type="PackedScene" uid="uid://d3pptfdqp5mha" path="res://Scenes/Pickup/Repair.tscn" id="7_pw1lr"]
[ext_resource type="PackedScene" uid="uid://c3lu8wxcokcaw" path="res://Scenes/Pickup/Battery.tscn" id="8_48hm4"]
[ext_resource type="PackedScene" uid="uid://bilhup8k4sg5t" path="res://Scenes/Pickup/Flare.tscn" id="9_5kjcf"]
[ext_resource type="PackedScene" uid="uid://g14nsg674121" path="res://Scenes/Pickup/Bomb.tscn" id="10_x6eon"]

[node name="MainGame" type="Node2D" node_paths=PackedStringArray("player", "ui")]
script = ExtResource("1_cli67")
player = NodePath("Player")
ui = NodePath("ui")

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="LaserContainer" type="Node2D" parent="."]

[node name="PickupContainer" type="Node2D" parent="."]

[node name="Level" parent="." instance=ExtResource("1_g3j21")]

[node name="Player" parent="." instance=ExtResource("2_qvjd0")]
position = Vector2(207, 754)
scale = Vector2(1.5, 1.5)
speed = 250

[node name="ui" parent="." instance=ExtResource("3_r8s1c")]

[node name="enemy_fighter1" parent="." instance=ExtResource("5_v0tgt")]
position = Vector2(325, 428)

[node name="Asteroid" parent="." instance=ExtResource("6_86x8t")]
position = Vector2(487, 651)

[node name="Repair" parent="." instance=ExtResource("7_pw1lr")]
position = Vector2(105, 583)

[node name="Repair2" parent="." instance=ExtResource("7_pw1lr")]
position = Vector2(145, 582)

[node name="Battery" parent="." instance=ExtResource("8_48hm4")]
position = Vector2(106, 533)

[node name="Flare" parent="." instance=ExtResource("9_5kjcf")]
position = Vector2(107, 481)

[node name="Bomb" parent="." instance=ExtResource("10_x6eon")]
position = Vector2(106, 431)

[node name="Bomb copy" parent="." instance=ExtResource("10_x6eon")]
position = Vector2(106, 391)

[node name="Bomb dupe" parent="." instance=ExtResource("10_x6eon")]
position = Vector2(106, 344)

[node name="Bomb cousin" parent="." instance=ExtResource("10_x6eon")]
position = Vector2(107, 301)

[node name="enemy_fighter2" parent="." instance=ExtResource("5_v0tgt")]
position = Vector2(438, 350)

[node name="Battery2" parent="." instance=ExtResource("8_48hm4")]
position = Vector2(144, 533)

[node name="enemy_fighter3" parent="." instance=ExtResource("5_v0tgt")]
position = Vector2(534, 796)

[connection signal="hull_changed" from="Player" to="ui" method="_on_player_hull_changed"]
[connection signal="shield_changed" from="Player" to="ui" method="_on_player_shield_changed"]
[connection signal="used_battery" from="Player" to="ui" method="_on_player_used_battery"]
[connection signal="used_bomb" from="Player" to="ui" method="_on_player_used_bomb"]
[connection signal="used_flare" from="Player" to="ui" method="_on_player_used_flare"]
[connection signal="used_repair" from="Player" to="ui" method="_on_player_used_repair"]
[connection signal="battery_amount_update" from="ui" to="Player" method="_on_ui_battery_amount_update"]
[connection signal="bomb_empty" from="ui" to="Player" method="_on_ui_bomb_empty"]
[connection signal="flares_amount_update" from="ui" to="Player" method="_on_ui_flares_amount_update"]
[connection signal="missile_amount_update" from="ui" to="Player" method="_on_ui_missile_amount_update"]
[connection signal="repair_amount_update" from="ui" to="Player" method="_on_ui_repair_amount_update"]
[connection signal="died" from="Asteroid" to="Asteroid" method="_on_died"]
